<?xml version="1.0"?>
<package format="2">
  <name>estimate_covariance</name>
  <version>0.0.0</version>
  <description>The estimate_covariance package</description>
  <maintainer email="chao.shun.cheng.tw@gmail.com">Chao Shun Cheng</maintainer>
  <author email="chao.shun.cheng.tw@gmail.com">Chao Shun Cheng</author>
  <license>Apache-2.0</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>autoware_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
